# narwhal

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  PLAN.md  README.md  bug.md  bugfix.md  clippy.toml  flake.nix  progress.md  rustfmt.toml
.cargo/: config.toml
crates/narwhal-app/: Cargo.toml  README.md
crates/narwhal-app/src/: app.rs  clipboard.rs  commands.rs  completion.rs  core.rs  draw_scheduler.rs  edit.rs  editor.rs  export.rs  lib.rs  meta.rs  registry.rs  run.rs  session.rs  snippets.rs  statements.rs  terminal.rs  wizard.rs
crates/narwhal-app/src/core/: accessors.rs  confirm.rs  construct.rs  diagram.rs  diff_schema.rs  dispatch.rs  dump_export.rs  editor_dispatch.rs  editor_handlers.rs  fk_nav.rs  format.rs  goto.rs  lint_cmd.rs  mod.rs  modals.rs  pending_actions.rs  plugin_executor.rs  plugins.rs  render_helpers.rs  results_actions.rs  run_loop.rs  sessions.rs  tabs.rs  text_utils.rs  transactions.rs
crates/narwhal-app/src/core/editor_dispatch/: completion.rs  editor_keys.rs  mod.rs  search.rs  sidebar.rs
crates/narwhal-app/src/core/state/: deps.rs  goto_modal.rs  mod.rs  modals.rs  process.rs  result.rs  session.rs  tab.rs  ui.rs
crates/narwhal-app/tests/: cell_edit.rs  completion.rs  connection_ux.rs  ddl_inject.rs  diagram_modal.rs  editor_search.rs  export.rs  format_cmd.rs  headless.rs  history.rs  json_viewer.rs  keymap_override.rs  keyring.rs  last_used.rs  meta_channel.rs  meta_tabs.rs  mouse.rs  multi_statement.rs  pagination_yank.rs  plugin.rs  prompt_completion.rs  result_sort_filter.rs  row_crud.rs  row_detail.rs  run_tab_pinning.rs  schema_refresh.rs  sidebar_scroll.rs  snapshots.rs  snippets.rs  ssh_wiring.rs  streaming_counter.rs  transactions.rs  wizard_path_completion.rs
crates/narwhal-app/tests/snapshots/: snapshots__connection_configured.snap  snapshots__empty.snap  snapshots__help_modal.snap  snapshots__rows_after_run.snap
crates/narwhal-commands/: Cargo.toml  README.md
crates/narwhal-commands/src/: action.rs  cell_edit.rs  commands.rs  completion.rs  ddl.rs  explain.rs  export.rs  keymap.rs  lib.rs  meta.rs  pending.rs  pre_connect.rs  schema_diff.rs  session.rs  snippets.rs  statements.rs  template.rs  wizard.rs
crates/narwhal-commands/src/completion/: context.rs  gather.rs  items.rs  keywords.rs  mod.rs  tokenizer.rs
crates/narwhal-commands/src/export/: csv.rs  error.rs  format.rs  insert.rs  json.rs  mod.rs  quoting.rs  source.rs  table.rs  tsv.rs
crates/narwhal-commands/src/wizard/: logic.rs  mod.rs  path.rs  state.rs
crates/narwhal-config/: Cargo.toml  README.md
crates/narwhal-config/src/: credentials.rs  interpolate.rs  last_used.rs  lib.rs  paths.rs  pgpass.rs  settings.rs  url.rs
crates/narwhal-config/tests/: tls.rs
crates/narwhal-core/: Cargo.toml  README.md
crates/narwhal-core/src/: cancel.rs  capabilities.rs  connection.rs  driver.rs  error.rs  lib.rs  schema.rs  ssh.rs  value.rs
crates/narwhal-core/tests/: capabilities_streaming.rs
crates/narwhal-domain/: Cargo.toml  README.md
crates/narwhal-domain/src/: editor.rs  lib.rs  schema.rs
crates/narwhal-driver-clickhouse/: Cargo.toml  README.md
crates/narwhal-driver-clickhouse/src/: lib.rs  types.rs
crates/narwhal-driver-clickhouse/tests/: binding.rs  ddl.rs  escape.rs  integration.rs
crates/narwhal-driver-duckdb/: Cargo.toml  README.md
crates/narwhal-driver-duckdb/src/: lib.rs  types.rs
crates/narwhal-driver-duckdb/tests/: byte_accuracy.rs  ddl.rs  read_only.rs  returning.rs
crates/narwhal-driver-mysql/: Cargo.toml  README.md
crates/narwhal-driver-mysql/src/: lib.rs  types.rs
crates/narwhal-driver-mysql/tests/: binding.rs  byte_accuracy.rs  ddl.rs  decode.rs  integration.rs  protocol.rs  table_kind.rs  unique_constraints.rs
crates/narwhal-driver-mysql/tests/common/: mod.rs
crates/narwhal-driver-postgres/: Cargo.toml  README.md
crates/narwhal-driver-postgres/src/: ddl.rs  lib.rs  tls.rs  types.rs
crates/narwhal-driver-postgres/tests/: byte_accuracy.rs  ddl.rs  integration.rs
crates/narwhal-driver-postgres/tests/common/: mod.rs
crates/narwhal-driver-postgres/tests/fixtures/: client.crt  client.key
crates/narwhal-driver-sqlite/: Cargo.toml  README.md
crates/narwhal-driver-sqlite/src/: lib.rs  types.rs
crates/narwhal-driver-sqlite/tests/: byte_accuracy.rs  ddl.rs  read_only.rs
crates/narwhal-history/: Cargo.toml  README.md
crates/narwhal-history/src/: journal.rs  lib.rs
crates/narwhal-history/tests/: redaction.rs
crates/narwhal-mcp/: Cargo.toml  README.md
crates/narwhal-mcp/src/: context.rs  error.rs  json_value.rs  lib.rs  protocol.rs  registry.rs  server.rs  workspace.rs
crates/narwhal-mcp/src/tools/: describe_schema.rs  explain_query.rs  list_connections.rs  mod.rs  run_query.rs
crates/narwhal-mcp/tests/: describe_and_explain.rs  handshake.rs  run_query.rs  workspace.rs
crates/narwhal-plugin/: Cargo.toml  README.md
crates/narwhal-plugin-lua/: Cargo.toml  README.md
crates/narwhal-plugin-lua/src/: lib.rs
crates/narwhal-plugin-lua/tests/: outcome_contract.rs  timeout.rs
crates/narwhal-plugin/src/: lib.rs
crates/narwhal-pool/: Cargo.toml  README.md
crates/narwhal-pool/src/: lib.rs  pool.rs
crates/narwhal-sql/: Cargo.toml  README.md
crates/narwhal-sql/benches/: splitter.rs
crates/narwhal-sql/src/: formatter.rs  guard.rs  lib.rs  lint.rs  splitter.rs
crates/narwhal-tui/: Cargo.toml  README.md
crates/narwhal-tui/src/: constants.rs  input.rs  layout.rs  lib.rs  theme.rs  widgets.rs
crates/narwhal-tui/src/widgets/: confirm.rs  editor.rs  goto.rs  help.rs  history.rs  json_viewer.rs  pending_preview.rs  results.rs  row_detail.rs  sidebar.rs  snippets.rs  wizard.rs
crates/narwhal-tui/src/widgets/results/: mod.rs  model.rs  popups.rs  schema_detail.rs  table_paint.rs
crates/narwhal-tui/tests/: editor_unicode.rs
docs/: EXCEPTIONS.md  RELEASING.md  refactor-status.md
narwhal/: Cargo.toml
narwhal/src/: main.rs
plans/: 05-clickhouse-tsv-bytes.md  06-01-status-bar-split.md  06-02-mouse-support.md  06-03-context-aware-completion.md  06-04-result-sort-filter.md  06-07-auto-pair.md  (+5 more)
(+20 files in other folders)
