[workspace]
resolver = "2"
members = [
    "crates/narwhal-core",
    "crates/narwhal-config",
    "crates/narwhal-sql",
    "crates/narwhal-pool",
    "crates/narwhal-history",
    "crates/narwhal-driver-postgres",
    "crates/narwhal-driver-sqlite",
    "crates/narwhal-driver-mysql",
    "crates/narwhal-driver-duckdb",
    "crates/narwhal-driver-clickhouse",
    "crates/narwhal-plugin",
    "crates/narwhal-plugin-lua",
    "crates/narwhal-vim",
    "crates/narwhal-tui",
    "crates/narwhal-app",
    "narwhal",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Berkant"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/berkant/narwhal"
description = "A TUI database client — DataGrip in your terminal"
keywords = ["database", "tui", "sql", "client"]
categories = ["command-line-utilities", "database"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization & config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Database drivers
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "column_decltype"] }
duckdb = { version = "1.1", features = ["bundled", "chrono"] }
mysql_async = { version = "0.34", default-features = false, features = ["minimal-rust", "rustls-tls"] }
mysql_common = { version = "0.32", default-features = false, features = ["chrono", "bigdecimal"] }

# Utilities
parking_lot = "0.12"
directories = "5.0"
# Platform-specific backend features are MANDATORY in keyring 3.x.
# Without them the crate silently falls back to a mock store that
# accepts set() and returns None from get(), which means narwhal
# would happily ask for a password, store it nowhere, and then fail
# the next :open with 'no password'. crypto-rust avoids the OpenSSL
# system dep on Linux.
keyring = { version = "3.0", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
unicode-segmentation = "1"
arboard = { version = "3.4", default-features = false }
base64 = "0.22"

# Secret handling
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"

# Internal crates
narwhal-core = { path = "crates/narwhal-core" }
narwhal-config = { path = "crates/narwhal-config" }
narwhal-sql = { path = "crates/narwhal-sql" }
narwhal-pool = { path = "crates/narwhal-pool" }
narwhal-history = { path = "crates/narwhal-history" }
narwhal-driver-postgres = { path = "crates/narwhal-driver-postgres" }
narwhal-driver-sqlite = { path = "crates/narwhal-driver-sqlite" }
narwhal-driver-mysql = { path = "crates/narwhal-driver-mysql" }
narwhal-driver-duckdb = { path = "crates/narwhal-driver-duckdb" }
narwhal-driver-clickhouse = { path = "crates/narwhal-driver-clickhouse" }
narwhal-plugin = { path = "crates/narwhal-plugin" }
narwhal-plugin-lua = { path = "crates/narwhal-plugin-lua" }
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send", "serialize"] }
narwhal-vim = { path = "crates/narwhal-vim" }
narwhal-tui = { path = "crates/narwhal-tui" }
narwhal-app = { path = "crates/narwhal-app" }

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
checked_conversions = "warn"
default_trait_access = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
match_wild_err_arm = "warn"
needless_continue = "warn"
single_match_else = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
