[package]
name = "narwhal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Binary crate for narwhal, a TUI database client"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[[bin]]
name = "narwhal"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
narwhal-app.workspace = true
narwhal-config.workspace = true
narwhal-history.workspace = true
narwhal-mcp.workspace = true

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
