[package]
name = "narwhal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Binary crate for narwhal, a TUI database client"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[[bin]]
name = "narwhal"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
narwhal-app.workspace = true
narwhal-commands.workspace = true
narwhal-config.workspace = true
narwhal-core.workspace = true
narwhal-history.workspace = true
narwhal-mcp.workspace = true

tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
secrecy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[features]
default = ["driver-postgres", "driver-sqlite"]
driver-postgres = ["narwhal-app/driver-postgres", "narwhal-mcp/driver-postgres"]
driver-sqlite = ["narwhal-app/driver-sqlite", "narwhal-mcp/driver-sqlite"]
driver-mysql = ["narwhal-app/driver-mysql", "narwhal-mcp/driver-mysql"]
driver-duckdb = ["narwhal-app/driver-duckdb", "narwhal-mcp/driver-duckdb"]
driver-clickhouse = ["narwhal-app/driver-clickhouse", "narwhal-mcp/driver-clickhouse"]
all-drivers = [
    "driver-postgres",
    "driver-sqlite",
    "driver-mysql",
    "driver-duckdb",
    "driver-clickhouse",
]
