[package]
name = "narwhal-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Event loop, state management, glue code for narwhal"

[lints]
workspace = true

[dependencies]
narwhal-core.workspace = true
narwhal-config.workspace = true
narwhal-vim.workspace = true
narwhal-tui.workspace = true
narwhal-driver-postgres.workspace = true
narwhal-driver-sqlite.workspace = true
narwhal-driver-mysql.workspace = true
narwhal-pool.workspace = true
narwhal-history.workspace = true
narwhal-sql.workspace = true

tokio.workspace = true
crossterm.workspace = true
ratatui.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.13"
rusqlite = "0.32"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
insta = "1.40"
ratatui = { workspace = true, default-features = false }
regex-lite = "0.1"
