[package]
name = "narwhal-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Event loop, state management, glue code for narwhal"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
narwhal-core.workspace = true
narwhal-config.workspace = true
narwhal-vim.workspace = true
narwhal-tui.workspace = true
narwhal-domain.workspace = true
narwhal-commands.workspace = true
narwhal-driver-registry = { workspace = true }
narwhal-plugin.workspace = true
narwhal-plugin-lua.workspace = true
async-trait.workspace = true
narwhal-pool.workspace = true
narwhal-history.workspace = true
narwhal-sql.workspace = true

tokio.workspace = true
crossterm.workspace = true
ratatui.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde_json.workspace = true
arboard.workspace = true
base64.workspace = true
directories.workspace = true
secrecy = { workspace = true }
zeroize = { workspace = true }

[features]
default = ["driver-postgres", "driver-sqlite"]
driver-postgres = ["narwhal-driver-registry/driver-postgres"]
driver-sqlite = ["narwhal-driver-registry/driver-sqlite"]
driver-mysql = ["narwhal-driver-registry/driver-mysql"]
driver-duckdb = ["narwhal-driver-registry/driver-duckdb"]
driver-clickhouse = ["narwhal-driver-registry/driver-clickhouse"]
all-drivers = [
    "driver-postgres",
    "driver-sqlite",
    "driver-mysql",
    "driver-duckdb",
    "driver-clickhouse",
]

[dev-dependencies]
tempfile = "3.13"
rusqlite = "0.32"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
insta = "1.40"
regex-lite = "0.1"
narwhal-driver-registry = { workspace = true, features = ["all-drivers"] }
