[package]
name = "narwhal-commands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Stateless command and helper modules for narwhal: completion, export, wizard, snippets, DDL, EXPLAIN, cell edit, statement extraction."

[dependencies]
narwhal-core.workspace = true
narwhal-domain.workspace = true
narwhal-history.workspace = true
narwhal-pool.workspace = true
narwhal-sql.workspace = true
narwhal-config.workspace = true
narwhal-vim.workspace = true

crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid.workspace = true
thiserror.workspace = true
directories.workspace = true
tracing.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3"
rusqlite = "0.32"

[lints]
workspace = true
