[package]
name = "narwhal-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Config loader & credential storage for narwhal"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
narwhal-core.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
directories.workspace = true
keyring.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
secrecy = { workspace = true }
