[package]
name = "narwhal-driver-clickhouse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ClickHouse HTTP driver for narwhal"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
narwhal-core.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1"
url = "2.5"
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
