[package]
name = "narwhal-driver-clickhouse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ClickHouse HTTP driver for narwhal"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
narwhal-core.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
# `default-features = false` zorunlu: reqwest'in default-tls özelliği
# native-tls → openssl-sys çekiyor. `keyring`'de bilinçli `crypto-rust`
# ile OpenSSL bağımlılığından kaçınıldığı için (workspace Cargo.toml'a bkz.)
# burada da rustls hattını saf tutmak gerek; aksi takdirde audit yüzeyi,
# binary boyutu ve Linux'ta `libssl-dev` zorunluluğu geri gelir.
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "rustls-tls",
    "charset",
    "http2",
    "system-proxy",
] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1"
url = "2.5"
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
