[package]
name = "narwhal-driver-mysql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MySQL/MariaDB driver for narwhal"

[lints]
workspace = true

[dependencies]
narwhal-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
serde_json.workspace = true
futures.workspace = true
mysql_async.workspace = true
mysql_common.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["mysql"] }
