[package]
name = "narwhal-driver-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PostgreSQL driver for narwhal"

[dependencies]
narwhal-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
