[package]
name = "narwhal-driver-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PostgreSQL driver for narwhal"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
narwhal-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
bytes = "1.7"
futures = { workspace = true }
rustls = "0.23"
tokio-postgres-rustls = "0.13"
rustls-native-certs = "0.8"
rustls-pemfile = "2.1"
lru = "0.12"

[dev-dependencies]
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tempfile = "3.13"
