[package]
name = "narwhal-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Append-only query history journal for narwhal"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
